sorted currency list. Fixed some overflow issues on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,6 @@ h1 {
 }
 
 .input {
-  border-radius: 0 0 3px 3px;
   padding: 1rem .25rem;
   font-size: 2rem;
   width: 100%;
@@ -76,7 +75,6 @@ select {
   /* margin-left: .5rem; */
   font-size: 1.3rem;
   /* appearance: none; */
-  outline: 0;
   background: rgb(98, 172, 246);
   background-image: none;
   width: 100%;
@@ -84,10 +82,9 @@ select {
   color: black;
   cursor: pointer;
   overflow: wrap;
-  text-overflow: ellipsis;
   z-index: 1;
-  outline: 0px;
-  border: 0px;
+  outline: none;
+  border: none;
   padding: .1rem .25rem;
 }
 
@@ -118,6 +115,10 @@ select:focus {
 }
 
 @media (max-width: 600px) {
+
+  body {
+    box-shadow: none;
+  }
 
   h1 {
     font-size: 2.5rem;
